--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Baker</title>
+  <link rel="shortcut icon" type="image/x-icon" href="/image/favicon.png">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <center>
+    <br><br><br><br><br>
+    <div class='search'>
+      <div class='box'>
+        <image class='icon' src='/image/icon.png'>
+        <input class='input' placeholder="단축할 링크를 입력해주세요.">
+        <br>
+        <div class='copied'>
+          <p class='copiedText'>a</p>
+        </div>
+      </div>
+    </div>
+  </center>
+  <script src="script.js"></script>
+</body>
+
+</html>
